added styling to #github-link

--- a/src/styles.css
+++ b/src/styles.css
@@ -80,3 +80,8 @@ div.weather-details {
   padding: 20px;
   text-align: right;
 }
+#github-link {
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
+}
